<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/menu_save"   android:title="@string/menu_save"
        android:orderInCategory="1" />
    <item android:id="@+id/menu_clear"   android:title="@string/menu_clear"
        android:orderInCategory="2" />

    <item android:id="@+id/menu_save_to_cloud"   android:title="@string/menu_save_to_cloud"
        android:orderInCategory="10" />
    <item android:id="@+id/menu_load"   android:title="@string/menu_load"
        android:orderInCategory="11" />

  <item android:id="@+id/menu_settings" android:title="@string/action_settings"
        android:orderInCategory="20"/>


    <item android:id="@+id/menu_separator" android:title="---------"
        android:orderInCategory="50"/>
    <item android:id="@+id/menu_team" android:title="@string/action_team"
        android:orderInCategory="60"/>
    <item android:id="@+id/menu_sync" android:title="@string/action_sync"
        android:orderInCategory="70"/>

</menu>
